--- a/docs/alkiln/automated_testing.mdx
+++ b/docs/alkiln/automated_testing.mdx
@@ -815,7 +815,7 @@ Leave out other parts of file's url.
 
 ---
 
-<!-- Moved -->
+<!-- Moved to #writing_tests.mdx#compare-files -->
 
 You can compare example PDFs (sometimes called a baseline) to downloaded PDFs to make sure they're the same. The baseline PDF must be stored in your ["Sources" folder](https://docassemble.org/docs/playground.html#sources) along with your tests, and the downloaded PDF should have been downloaded by the above step (`Then I download "download.pdf"`) earlier in the same scenario.
 
@@ -1407,6 +1407,8 @@ Other than `DOCASSEMBLE_DEVELOPER_API_KEY`, this information can usually be publ
 
 ### ALKiln environment variables
 
+<!-- Moved to writing_tests.mdx#temp-server-reload -->
+
 There are some environment variables that ALKiln uses internally that don't need to be "inputs". They go under the `env:` section instead of under `with:`.
 
 `MAX_SECONDS_FOR_SERVER_RELOAD` customizes how long to allow your tests to wait when the server is reloading. This helps avoid tests failing when they should otherwise be passing.
@@ -1436,6 +1438,8 @@ ALKiln cannot stop the first test from failing, but `MAX_SECONDS_FOR_SERVER_RELO
 :::
 
 ### Arbitrary environment variables
+
+<!-- Deleted -->
 
 See [the GitHub secrets section](#github-secrets) on setting arbitrary environment variables. The section describes using GitHub secrets and using plain values.
 
@@ -1472,6 +1476,8 @@ If you've run the Setup interview more recently, you will already have this code
 
 ### Triggering GitHub tests
 
+<!-- Moved to writing_tests.mdx#workflow-extras -->
+
 By default, the ALKiln setup interview makes sure that the tests are triggered when someone pushes code the repository. For example, when they press the 'Commit' button in docassemble. It also makes sure the tests can be [triggered manually](https://docs.github.com/en/actions/using-workflows/manually-running-a-workflow#running-a-workflow).
 
 There is a file in your repository that GitHub uses to trigger this workflow. To see it:
@@ -1496,6 +1502,8 @@ The keys that trigger the workflow (e.g. `push` and `workflow_dispatch`) can be 
 
 #### Scheduled tests
 
+<!-- Moved to writing_tests.mdx#schedule-trigger -->
+
 You can also run these tests on a schedule - daily, weekly, monthly, or on any other interval. To run the tests on a schedule, you must add `schedule` to the `on`  object in your workflow file and give it an "interval" value. For example:
 
 ```yml
@@ -1512,6 +1520,8 @@ If you've run the Setup interview more recently, you will already have this code
 
 #### Pull requests
 
+<!-- Moved to writing_tests.mdx#pr-trigger -->
+
 You can also trigger tests to run when someone makes a [pull request](https://docs.github.com/en/pull-requests/collaborating-with-pull-requests/proposing-changes-to-your-work-with-pull-requests/about-pull-requests) in GitHub.
 
 In the `on` object in your workflow file, add the `pull_request` trigger key. For example:
@@ -1524,6 +1534,8 @@ on:
 ```
 
 #### All together
+
+<!-- Deleted -->
 
 After adding all those, your whole `on` section might look something like this:
 
@@ -1543,6 +1555,8 @@ on:
 ## FAQ
 
 ### I have a private GitHub repository. Can I use this testing framework?
+
+<!-- Moved to writing_tests.mdx#faq -->
 
 Yes, you can use ALKiln with a private repository, though you have to do a bit of extra work.
 
@@ -1595,6 +1609,8 @@ After that, you can add the story table or other Steps that will test your inter
 Make sure to leave the `Feature:` line at the very top of the file. Avoid repeating the `Feature:` key anywhere else in the file.
 
 ### Why should I write a Scenario description?
+
+<!-- Moved to writing_tests.mdx#scenario-descriptions -->
 
 `Scenario` descriptions affect the names of error screenshot files and report headings, so try to write something unique that you will recognize later. It will help you identify what happened with each test.
 
